# clear-day-analysis

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  export_tmy_sun_position_dni.py  make_plots.py  plot_sun_position_reference_days.py  pyproject.toml  quick_run.py
.github/workflows/: ci.yml
cpp/bindings/: sunpos_pybind.cpp
docs/: DEVELOPMENT.md  METHOD.md
src/clear_day_analysis/: __init__.py  _sunpos.pyi  ashrae_clear_day.py  day_classification.py  plots.py  solar_geometry.py  tmy_reader.py  workflow.py
tests/: test_ashrae_fit.py  test_day_classification.py  test_export_tmy_sun_position_dni.py  test_plot_sun_position_reference_days.py  test_sunpos_smoke.py  test_tmy_reader_nsrdb.py  test_tmy_reader_pvgis.py  test_tmy_reader_solargis.py  test_workflow.py
tests/data/: pvgis_tmy_minimal.csv
