[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "clear-day-analysis"
version = "0.1.0"
description = "Clear-day envelope and TMY classification tools"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  # Build helpers: make CI more reliable across OS
  "cmake>=3.20",
  "ninja",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"